# hactool-rs

./: .gitignore  Cargo.toml  build.rs
src/: args.rs  keys.rs  lib.rs  main.rs  settings.rs  utils.rs
src/file_formats/: hfs0.rs  mod.rs  nca.rs  npdm.rs  pfs0.rs
test_files/: main.npdm
tests/: ndpm.rs  pfs0.rs
